# fa_simple_auth

./: pyproject.toml
fa_auth_system/: system.py
fa_auth_system/database/: dao.py  models.py  utils.py
fa_auth_system/logic/: assign_service.py  crypt.py  misc.py  rbac.py
fa_auth_system/routes/: auth.py  crud.py  main.py
fa_auth_system/schemas/: rbac.py
